# callspec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: assertion_type_request.md  bug_report.md  feature_request.md
.github/workflows/: provider_health.yml  release.yml  test.yml
action/: action.yml
callspec/: __init__.py  errors.py  verdict.py
callspec/assertions/: __init__.py  base.py  composite.py  contract.py  negation.py  regression.py  structural.py  trajectory.py  trajectory_base.py  trajectory_regression.py
callspec/capture/: __init__.py  interceptor.py  normalizer.py
callspec/capture/adapters/: anthropic.py  generic.py  langchain.py  openai.py  pydantic_ai.py
callspec/cli/: console.py  main.py  provider_resolver.py
callspec/cli/commands/: check.py  providers.py  report.py  run.py  snapshot.py
callspec/core/: builder.py  config.py  report.py  result.py  runner.py  suite.py  trajectory.py  trajectory_builder.py  types.py  yaml_suite.py
callspec/integrations/: __init__.py  github_actions.py
callspec/providers/: __init__.py  anthropic.py  base.py  google.py  litellm.py  mistral.py  mock.py  ollama.py  openai.py  response.py
callspec/pytest_plugin/: assertions.py  fixtures.py  plugin.py  reporter.py
callspec/snapshots/: __init__.py  diff.py  manager.py  serializer.py
case_study/: README.md  model_swap_drift.py  test_refund_agent.py
case_study/snapshots/: baselines.json
case_study/trajectories/: gpt4o_correct.json  gpt4o_high_value.json  new_model_high_value.json  new_model_regression.json
deprecation/: README.md  README_PYPI.md  pyproject.toml
deprecation/llm_assert/: __init__.py
docs/: architecture.md  assertion_types.md  ci_guide.md  contract_assertions.md  contributing.md  faq.md  getting_started.md  provider_guide.md  pytest_and_ci.md  pytest_guide.md  regression_guide.md  sampling_guide.md  scoring_guide.md  snapshots_and_drift.md  trajectory_assertions.md  yaml_suite_format.md
llm-assert-benchmark/: LICENSE
llm-assert-benchmark/baselines/claude_3_haiku_20240307/: format_compliance.json  instruction_following.json  semantic_intent.json  structured_output.json
llm-assert-benchmark/baselines/claude_sonnet_4_20250514/: chain_of_thought.json  numeric_reasoning.json  structured_output.json
llm-assert-benchmark/baselines/gpt4o_2024_05_13/: code_generation.json  format_compliance.json  semantic_intent.json  structured_output.json
llm-assert-benchmark/prompts/: chain_of_thought.txt  instruction_following.txt  numeric_reasoning.txt  refusal_boundary.txt  semantic_intent.txt  structured_output.txt
llm-assert-benchmark/requirements/: verdict.txt
llm-assert-benchmark/results/: api_call_counts.json  comparison_report.md  drift_detection.json  exit_codes.json  loc.json  setup_time.json
llm-assert-benchmark/scripts/: generate_report.py  measure_api_calls.py  measure_exit_codes.sh  measure_flakiness.py  measure_setup_time.sh
llm_assert/: __init__.py  errors.py  verdict.py
llm_assert/assertions/: base.py  behavioral.py  composite.py  contract.py  negation.py  refusal_patterns.py  regression.py  semantic.py  structural.py  trajectory.py  trajectory_base.py  trajectory_regression.py
llm_assert/capture/: interceptor.py  normalizer.py
llm_assert/cli/: console.py  main.py
llm_assert/core/: builder.py  config.py  report.py  result.py  runner.py  suite.py  trajectory.py  trajectory_builder.py  types.py  yaml_suite.py
llm_assert/integrations/: __init__.py  github_actions.py
llm_assert/providers/: __init__.py  anthropic.py  base.py  google.py  litellm.py  mistral.py  mock.py  ollama.py  openai.py  response.py
llm_assert/pytest_plugin/: assertions.py  fixtures.py  plugin.py  reporter.py
llm_assert/sampling/: __init__.py  sampler.py  seed.py  strategies.py
llm_assert/scoring/: confidence.py  embeddings.py
llm_assert/snapshots/: __init__.py  diff.py  manager.py  serializer.py
tests/fixtures/: recorded_responses.py  semantic_pairs.py  tool_call_responses.py
tests/integration/: test_provider_anthropic.py  test_provider_google.py  test_provider_litellm.py  test_provider_mistral.py  test_provider_ollama.py  test_provider_openai.py  test_pytest_plugin.py  test_trajectory_plugin.py
tests/unit/: test_behavioral.py  test_capture_adapters.py  test_cli.py  test_composite.py  test_confidence.py  test_contract_assertions.py  test_github_actions.py  test_interceptor.py  test_normalizer.py  test_providers.py  test_regression.py  test_rich_report.py  test_runner.py  test_sampling.py  test_semantic.py  test_snapshots.py  test_structural.py  test_trajectory.py  test_trajectory_assertions.py  test_trajectory_builder.py  test_trajectory_snapshots.py  test_verdict_e2e.py  test_yaml_trajectory.py
verdict/: __init__.py  errors.py  verdict.py
verdict-benchmark/: Makefile  README.md
verdict-benchmark/prompts/: code_generation.txt  format_compliance.txt
verdict-benchmark/requirements/: promptfoo-setup.sh
verdict-benchmark/results/: comparison_report.md  cost.json  flakiness.json  setup_time.json
verdict-benchmark/scripts/: generate_report.py  measure_api_calls.py  measure_cost.py  measure_deepeval_flakiness.py  measure_drift_detection.py  measure_exit_codes.sh  measure_flakiness.py  measure_loc.py  measure_setup_time.sh  record_baselines.py
verdict/assertions/: behavioral.py  composite.py  negation.py  refusal_patterns.py  regression.py  semantic.py  structural.py
verdict/cli/: console.py
verdict/core/: builder.py  config.py  report.py  result.py  runner.py  suite.py  types.py  yaml_suite.py
verdict/integrations/: __init__.py  github_actions.py
verdict/providers/: __init__.py  anthropic.py  base.py  google.py  litellm.py  mistral.py  mock.py  ollama.py  openai.py  response.py
verdict/pytest_plugin/: assertions.py  fixtures.py  plugin.py  reporter.py
verdict/sampling/: __init__.py  sampler.py  seed.py  strategies.py
verdict/scoring/: confidence.py  embeddings.py  structural.py
verdict/snapshots/: __init__.py  diff.py  manager.py  serializer.py
(+49 files in other folders)
