[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-assert"
version = "0.1.0"
description = "Behavioral assertion testing for LLM applications. The pytest of LLM testing."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Bradley R. Kinnard", email = "brad@aftermath.tech" },
]
keywords = ["llm", "testing", "assertions", "pytest", "ai", "behavioral-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "scipy>=1.9.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-generativeai>=0.3.0"]
mistral = ["mistralai>=0.1.0"]
ollama = ["ollama>=0.1.0"]
litellm = ["litellm>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "llm-assert[semantic]",
    "llm-assert[openai]",
    "llm-assert[anthropic]",
    "llm-assert[google]",
    "llm-assert[mistral]",
    "llm-assert[ollama]",
    "llm-assert[litellm]",
    "llm-assert[dev]",
]

[project.scripts]
llm-assert = "llm_assert.cli.main:cli"

[project.entry-points."pytest11"]
llm-assert = "llm_assert.pytest_plugin.plugin"

[project.urls]
Homepage = "https://github.com/moonrunnerkc/llm-assert"
Documentation = "https://verdict.run/docs"
Repository = "https://github.com/moonrunnerkc/llm-assert"
Issues = "https://github.com/moonrunnerkc/llm-assert/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_assert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm_assert_behavioral: marks tests as behavioral (multi-sample, expensive)",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
