[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callspec"
version = "0.1.0"
description = "Contract testing for LLM tool calls."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    { name = "Bradley R. Kinnard", email = "brad@aftermath.tech" },
]
keywords = ["llm", "testing", "tool-calls", "contracts", "pytest", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-generativeai>=0.3.0"]
mistral = ["mistralai>=0.1.0"]
ollama = ["ollama>=0.1.0"]
litellm = ["litellm>=1.0.0"]
semantic = [
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "callspec[openai]",
    "callspec[anthropic]",
    "callspec[google]",
    "callspec[mistral]",
    "callspec[ollama]",
    "callspec[litellm]",
    "callspec[semantic]",
    "callspec[dev]",
]

[project.scripts]
callspec = "callspec.cli.main:cli"

[project.entry-points."pytest11"]
callspec = "callspec.pytest_plugin.plugin"

[project.urls]
Homepage = "https://github.com/moonrunnerkc/callspec"
Documentation = "https://github.com/moonrunnerkc/callspec"
Repository = "https://github.com/moonrunnerkc/callspec"
Issues = "https://github.com/moonrunnerkc/callspec/issues"

[tool.hatch.build.targets.wheel]
packages = ["callspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "callspec_behavioral: marks tests as behavioral (multi-sample, expensive)",
    "tool_contract: marks tests as contract tests (skippable with --callspec-skip-contracts)",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
